--- a/code/templates/core/about.html
+++ b/code/templates/core/about.html
@@ -17,9 +17,9 @@
             <div class="TODO">
                 <h2>Source Code</h2>
                 <p>This application was designed and built by Artemis Consulting, Inc.  All source code hosted on github at
-                    <a href="https://github.com/artemis-consulting">github.com/artemis-consulting</a>. For
+                    <a target=_blank href="https://github.com/artemis-consulting">github.com/artemis-consulting</a>. For
                 more information, please visit
-                    <a href="http://www.artemisconsultinginc.com">www.artemisconsultinginc.com</a>.</p>
+                    <a target=_blank href="http://www.artemisconsultinginc.com">www.artemisconsultinginc.com</a>.</p>
 
                 <h2><a name="anchor1" id="anchor1">Licensing Information</a></h2>
                 <p>Copyright 2015 Artemis Consulting, Inc.</p>
