--- a/code/templates/core/homepage.html
+++ b/code/templates/core/homepage.html
@@ -37,35 +37,40 @@
                          <p>Having drug-related
                             information and tools at your fingertips is a critical part of your
                             overall health and well-being. The data provided by the FDA Drug
-                            Monitor are the latest and most relevant available. Use this site along
+                            Monitor are the latest and most relevant available data available from the FDA. 
+                            Use this site along
                             with your physician's advice to make informed decisions about the drugs
-                            you take.</p>
+                            you take. This site helps cross connect information between manufacturers, drug labels, adverse events and enforcement information 
+                            at an unprecedented level. Users can start with any of the data-sets and cross-connect to any of the other data-sets.</p>
                         <p>For more information regarding the data sources used on this website, visit
                             <a href="http://www.fda.gov">www.fda.gov<a>.
                         </p>
                     </div>
                     <div class="span4 thumb-link first-row">
                         <img src="{% static "images/thumb03.jpg" %}" class="scalable-image">
-                        <h2><small><i class="green"></i> Lore dolar</small> Drug Names</h2>
-                        <p>Consectetur adipiscing uscipit <a href="">elementum</a>.</p>
+                        <h2><small><i class="green"></i> Explore Drug Labels and more</small> Drug Names</h2>
+                        <p>This section allows users to browse drug names, their labels, and see adverse reactions 
+                        for a selected drug, as well as any enforcement actions for a selected drug<a href="/pool3/browse/labels/">Start browsing drugs</a>.</p>
                     </div>
                     <div class="span4 thumb-link">
                         <img src="{% static "images/thumb04.jpg" %}" class="scalable-image">
-                        <h2><small><i class="blue"></i> Get malesuad</small> Adverse Events</h2>
-                        <p>Lorem ipsum dolar sit amet elit ivamus tempus, <a href="">ipiscing elit</a>.</p>
+                        <h2><small><i class="blue"></i> Explore Adverse Events and more</small> Adverse Events</h2>
+                        <p>This section allows users to browse adverse events, see drugs associated with these adverse events, and also drilldown by attributes like gender.
+                        <a href="/pool3/browse/events/">Start browsing adverse events</a>.</p>
                     </div>
                     <div class="span4 thumb-link second-row">
                         <img src="{% static "images/thumb01.jpg" %}" class="scalable-image">
-                        <h2><small><i class="orange"></i> Lorem ipsum</small> Enforcement</h2>
-                        <p>Adipiscing elit ivamus tempus, <a href="">ipiscing elit</a>.</p>
+                        <h2><small><i class="orange"></i>Explore Enforcement Actions and more</small> Enforcement Actions</h2>
+                        <p>This section allows users to browse voluntary and involuntary enforcement actions by State where they occurred, see drugs 
+                        and drug manufacturers associated with these enforcement actions. Users can also link for Enforcement actions to Manufacturer information.
+                        <a href="/pool3/browse/events/">Start browsing enforcement actions</a>.</p>
                     </div>
                     <div class="span4 thumb-link">
                         <img src="{% static "images/thumb02.jpg" %}" class="scalable-image">
-                        <h2><small><i class="purple"></i> Malesuada</small> Manufacturers</h2>
-                        <ul class="plain">
-                            <li><a href="">Mi velit vestibulum</a></li>
-                            <li><a href="">ullamcorper iaculis</a></li>
-                        </ul>
+                        <h2><small><i class="purple"></i> Explore Drug Manufacturers and more</small> Manufacturers</h2>
+                        <p>This section allows users to browse drug manufacturers that are part of our source data, as either a manufacturer or a party in an enforcement action 
+                        or whose drugs have certain adverse events when used. 
+                        <a href="/pool3/browse/events/">Start browsing enforcement actions</a>.</p>
                     </div>
                     <div class="clear"></div>
                 </div>
