--- a/code/templates/core/base.html
+++ b/code/templates/core/base.html
@@ -61,7 +61,7 @@
     <!-- javascript enabled message -->
     <noscript>
         <div class="alert">
-            <p style="background-color:red;"><strong>For a better browsing experience, please enable javascript</strong></p>
+            <p style="background-color:red;color:white;text-align:center;"><strong>For a better browsing experience, please enable javascript</strong></p>
         </div>
     </noscript>
 
